<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFragment"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/newLawyer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_lawyer"
            android:textColor="@color/textWhite"
            android:textSize="40sp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/newLawyerLayout"/>

        <LinearLayout
            android:id="@+id/newLawyerLayout"
            android:layout_width="match_parent"
            android:layout_height="629dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newLawyer"
            android:orientation="vertical"
            android:gravity="center">

            <EditText
                android:id="@+id/lawyerName"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="15dp"
                android:hint="@string/name"
                android:autofillHints="name"
                android:fontFamily="@font/chococooky"
                android:ems="10"
                android:minHeight="48dp"
                android:textColorHint="@color/textWhite" />

            <EditText
                android:id="@+id/lawyerNumber"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="15dp"
                android:hint="@string/phonenumber"
                android:autofillHints="phone"
                android:fontFamily="@font/chococooky"
                android:ems="10"
                android:minHeight="48dp"
                android:textColorHint="@color/textWhite" />

            <EditText
                android:id="@+id/lawyerEmail"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="15dp"
                android:hint="@string/email_address"
                android:autofillHints="emailAddress"
                android:fontFamily="@font/chococooky"
                android:ems="10"
                android:minHeight="48dp"
                android:textColorHint="@color/textWhite" />

            <Button
                android:id="@+id/addLawyer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:fontFamily="@font/chococooky"
                android:text="@string/add_lawyer"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="#673AB7" />

            </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>